--- a/src/cover.html
+++ b/src/cover.html
@@ -1,6 +1,6 @@
 <div id="cover">
 <h2 id="title1">すいーとみゅーじっく vol.7</h2>
-<h2 id="title2">ドキッ！Visual Studio App CenterではじめてのXamarin.Forms CI/CD</h2>
+<h2 id="title2">Visual Studio App CenterではじめてのXamarin.Forms CI/CD</h2>
 <div id="author">
 <table id="author">
     <tr><td>著:</td><td>setoazusa</td>
