--- a/src/imprint.html
+++ b/src/imprint.html
@@ -1,10 +1,11 @@
 </div>
 <div id="imprint">
     <h2>すいーとみゅーじっく vol.7<br>
-        ドキッ！Visual Studio App Centerではじめる</h2>
+        Visual Studio App CenterではじめてのXamarin.Forms CI/CD</h2>
     <hr>
     <table align="center">
         <tr><td class="key">著者</td><td>setoazusa</td></tr>
+        <tr><td class="key">イラスト</td><td>16号</td></tr>
         <tr><td class="key">発行</td><td>ふぃーるどのーつ</td></tr>
         <tr><td class="key">連絡先</td><td>pub@fieldnotes.jp</td></tr>
         <tr><td class="key">発行日</td><td>2019年04月14日第1刷</td></tr>
